Simplified adding ćheckpoints

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -448,13 +448,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d20f5d435235448daaa6be0fb39d4382",
+       "model_id": "84edbb8f6a8b43d3964bb6e1e74fd668",
        "version_major": 2,
        "version_minor": 0
       },
@@ -472,10 +472,12 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 119\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[38;5;66;03m# Load checkpoint\u001b[39;00m\n\u001b[0;32m    116\u001b[0m start_index, paths, rgb_hists, hsv_hists, other_data \u001b[38;5;241m=\u001b[39m load_checkpoint()\n\u001b[1;32m--> 119\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m df, batch_index \u001b[38;5;129;01min\u001b[39;00m image_batch_generator(image_paths, batch_size, desired_size, start_index\u001b[38;5;241m=\u001b[39mstart_index, show_progress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[0;32m    120\u001b[0m     paths\u001b[38;5;241m.\u001b[39mextend(df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPath\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[0;32m    121\u001b[0m     rgb_hists\u001b[38;5;241m.\u001b[39mextend(df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRGB_Histogram\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mtolist())\n",
-      "Cell \u001b[1;32mIn[9], line 98\u001b[0m, in \u001b[0;36mimage_batch_generator\u001b[1;34m(image_files, batch_size, resize_size, start_index, show_progress)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start_index, \u001b[38;5;28mlen\u001b[39m(image_files), batch_size):\n\u001b[0;32m     97\u001b[0m     batch \u001b[38;5;241m=\u001b[39m image_files[index:index \u001b[38;5;241m+\u001b[39m batch_size]\n\u001b[1;32m---> 98\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [extract_image_details(index \u001b[38;5;241m+\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, path, resize_size) \u001b[38;5;28;01mfor\u001b[39;00m i, path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(batch)]\n\u001b[0;32m     99\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [features \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list \u001b[38;5;28;01mif\u001b[39;00m features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[0;32m    100\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(details_list)\n",
-      "Cell \u001b[1;32mIn[9], line 98\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start_index, \u001b[38;5;28mlen\u001b[39m(image_files), batch_size):\n\u001b[0;32m     97\u001b[0m     batch \u001b[38;5;241m=\u001b[39m image_files[index:index \u001b[38;5;241m+\u001b[39m batch_size]\n\u001b[1;32m---> 98\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [extract_image_details(index \u001b[38;5;241m+\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, path, resize_size) \u001b[38;5;28;01mfor\u001b[39;00m i, path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(batch)]\n\u001b[0;32m     99\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [features \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list \u001b[38;5;28;01mif\u001b[39;00m features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[0;32m    100\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(details_list)\n",
-      "Cell \u001b[1;32mIn[9], line 6\u001b[0m, in \u001b[0;36mextract_image_details\u001b[1;34m(image_id, path, resize_size)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mextract_image_details\u001b[39m(image_id, path, resize_size):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m----> 6\u001b[0m         image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(path)\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m image \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m      8\u001b[0m             image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mresize(image, resize_size)\n",
+      "Cell \u001b[1;32mIn[32], line 115\u001b[0m\n\u001b[0;32m    111\u001b[0m \u001b[38;5;66;03m# Load checkpoint\u001b[39;00m\n\u001b[0;32m    112\u001b[0m start_index, paths, rgb_hists, hsv_hists, other_data \u001b[38;5;241m=\u001b[39m load_checkpoint()\n\u001b[1;32m--> 115\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m df, batch_index \u001b[38;5;129;01min\u001b[39;00m image_batch_generator(image_paths, batch_size, desired_size, start_index\u001b[38;5;241m=\u001b[39mstart_index, show_progress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[0;32m    116\u001b[0m     paths\u001b[38;5;241m.\u001b[39mextend(df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPath\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[0;32m    117\u001b[0m     rgb_hists\u001b[38;5;241m.\u001b[39mextend(df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRGB_Histogram\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mtolist())\n",
+      "Cell \u001b[1;32mIn[32], line 94\u001b[0m, in \u001b[0;36mimage_batch_generator\u001b[1;34m(image_files, batch_size, resize_size, start_index, show_progress)\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start_index, \u001b[38;5;28mlen\u001b[39m(image_files), batch_size):\n\u001b[0;32m     93\u001b[0m     batch \u001b[38;5;241m=\u001b[39m image_files[index:index \u001b[38;5;241m+\u001b[39m batch_size]\n\u001b[1;32m---> 94\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [extract_image_details(index \u001b[38;5;241m+\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, path, resize_size) \u001b[38;5;28;01mfor\u001b[39;00m i, path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(batch)]\n\u001b[0;32m     95\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [features \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list \u001b[38;5;28;01mif\u001b[39;00m features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[0;32m     96\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(details_list)\n",
+      "Cell \u001b[1;32mIn[32], line 94\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start_index, \u001b[38;5;28mlen\u001b[39m(image_files), batch_size):\n\u001b[0;32m     93\u001b[0m     batch \u001b[38;5;241m=\u001b[39m image_files[index:index \u001b[38;5;241m+\u001b[39m batch_size]\n\u001b[1;32m---> 94\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [extract_image_details(index \u001b[38;5;241m+\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, path, resize_size) \u001b[38;5;28;01mfor\u001b[39;00m i, path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(batch)]\n\u001b[0;32m     95\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [features \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list \u001b[38;5;28;01mif\u001b[39;00m features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[0;32m     96\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(details_list)\n",
+      "Cell \u001b[1;32mIn[32], line 43\u001b[0m, in \u001b[0;36mextract_image_details\u001b[1;34m(image_id, path, resize_size)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[38;5;66;03m# Extract metadata\u001b[39;00m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 43\u001b[0m     exif_data \u001b[38;5;241m=\u001b[39m img\u001b[38;5;241m.\u001b[39m_getexif()\n\u001b[0;32m     44\u001b[0m     metadata \u001b[38;5;241m=\u001b[39m {ExifTags\u001b[38;5;241m.\u001b[39mTAGS\u001b[38;5;241m.\u001b[39mget(k, k): v \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m exif_data\u001b[38;5;241m.\u001b[39mitems()} \u001b[38;5;28;01mif\u001b[39;00m exif_data \u001b[38;5;28;01melse\u001b[39;00m {}\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\PIL\\PngImagePlugin.py:1010\u001b[0m, in \u001b[0;36mPngImageFile._getexif\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1008\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_getexif\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m   1009\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexif\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minfo:\n\u001b[1;32m-> 1010\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mload()\n\u001b[0;32m   1011\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexif\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minfo \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRaw profile type exif\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minfo:\n\u001b[0;32m   1012\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\PIL\\ImageFile.py:291\u001b[0m, in \u001b[0;36mImageFile.load\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    288\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(msg)\n\u001b[0;32m    290\u001b[0m b \u001b[38;5;241m=\u001b[39m b \u001b[38;5;241m+\u001b[39m s\n\u001b[1;32m--> 291\u001b[0m n, err_code \u001b[38;5;241m=\u001b[39m decoder\u001b[38;5;241m.\u001b[39mdecode(b)\n\u001b[0;32m    292\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    293\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -558,14 +560,10 @@
     "\n",
     "    \n",
     "def load_checkpoint():\n",
-    "    checkpoints = sorted([f for f in os.listdir() if f.startswith('checkpoint_') and f.endswith('.pkl')])\n",
-    "    \n",
-    "    if not checkpoints:\n",
+    "    if not os.path.exists('checkpoint.pkl'):\n",
     "        return 0, [], [], [], []\n",
     "    \n",
-    "    latest_checkpoint = checkpoints[-1]\n",
-    "    \n",
-    "    with open(latest_checkpoint, 'rb') as f:\n",
+    "    with open('checkpoint.pkl', 'rb') as f:\n",
     "        batch_index, paths, rgb_hists, hsv_hists, other_data = pickle.load(f)\n",
     "\n",
     "    return batch_index, paths, rgb_hists, hsv_hists, other_data\n",
@@ -605,14 +603,9 @@
     "    hsv_hists.extend(df[['ID', 'HSV_Histogram']].values.tolist())\n",
     "    other_data.extend(df.drop(columns=['Path', 'RGB_Histogram', 'HSV_Histogram']).values.tolist())\n",
     "    \n",
-    "    # Save checkpoint\n",
-    "    with open(f'checkpoint_{batch_index}.pkl', 'wb') as f:\n",
+    "    # Save checkpoint, overrides old one and appends new data\n",
+    "    with open('checkpoint.pkl', 'wb') as f:\n",
     "        pickle.dump((batch_index, paths, rgb_hists, hsv_hists, other_data), f)\n",
-    "    \n",
-    "    # Delete previous checkpoint if exists (saves storage, can be deactivated)\n",
-    "    previous_checkpoint = f'checkpoint_{batch_index - batch_size}.pkl'\n",
-    "    if os.path.exists(previous_checkpoint):\n",
-    "        os.remove(previous_checkpoint)\n",
     "    \n",
     "\n",
     "# Save results\n",
@@ -634,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -654,7 +647,7 @@
        "100"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
