Delete checkpoint after program-success

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -39,27 +39,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number found images: 2056\n",
+      "Number found images: 181\n",
       "Some paths:\n",
-      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0001.png\n",
-      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0002.png\n",
-      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0003.png\n",
-      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0004.png\n",
-      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0005.png\n",
-      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0006.png\n",
-      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0007.png\n",
-      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0008.png\n",
-      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0009.png\n",
-      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0010.png\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\beach\\a-befendo-WqBIOCNn4AI-unsplash.jpg\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\beach\\abdelkader-kherbouche-XrzFxphchos-unsplash.jpg\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\beach\\adam-neumann-aFkBcBOJp1w-unsplash.jpg\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\beach\\aldain-austria-v0zVmWULYTg-unsplash.jpg\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\beach\\aleksandra-boguslawska-0w0udMMtKuQ-unsplash.jpg\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\beach\\alex-perez-invsxgYJOpU-unsplash.jpg\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\beach\\alex-perez-Iul_cHtH4NY-unsplash.jpg\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\beach\\alex-perez-NLUkAA-nDdE-unsplash.jpg\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\beach\\alex-perez-P93ijX1URuU-unsplash.jpg\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\beach\\alex-talmon-umq-jgTjr28-unsplash.jpg\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 70.1 ms\n"
+      "Wall time: 506 µs\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
     "    return image_files\n",
     "\n",
     "\n",
-    "image_paths = find_image_files(r\"C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\")\n",
+    "image_paths = find_image_files(r\"C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\beach\")\n",
     "#df_image_paths = pd.DataFrame({'ID': range(1, len(image_paths) + 1), 'Path': image_paths})\n",
     "#df_image_paths = pd.DataFrame(image_paths, columns=[\"Path\"])\n",
     "#df_image_paths.to_pickle('Path.pkl')\n",
@@ -448,38 +448,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded checkpoint.\n",
+      "Starting from path with ID: 101\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84edbb8f6a8b43d3964bb6e1e74fd668",
+       "model_id": "ca1c28cad09c479e8697646a53db1e74",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Processing images:   0%|          | 0/21 [00:00<?, ?it/s]"
+       "Processing images:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 115\u001b[0m\n\u001b[0;32m    111\u001b[0m \u001b[38;5;66;03m# Load checkpoint\u001b[39;00m\n\u001b[0;32m    112\u001b[0m start_index, paths, rgb_hists, hsv_hists, other_data \u001b[38;5;241m=\u001b[39m load_checkpoint()\n\u001b[1;32m--> 115\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m df, batch_index \u001b[38;5;129;01min\u001b[39;00m image_batch_generator(image_paths, batch_size, desired_size, start_index\u001b[38;5;241m=\u001b[39mstart_index, show_progress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[0;32m    116\u001b[0m     paths\u001b[38;5;241m.\u001b[39mextend(df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPath\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[0;32m    117\u001b[0m     rgb_hists\u001b[38;5;241m.\u001b[39mextend(df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRGB_Histogram\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mtolist())\n",
-      "Cell \u001b[1;32mIn[32], line 94\u001b[0m, in \u001b[0;36mimage_batch_generator\u001b[1;34m(image_files, batch_size, resize_size, start_index, show_progress)\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start_index, \u001b[38;5;28mlen\u001b[39m(image_files), batch_size):\n\u001b[0;32m     93\u001b[0m     batch \u001b[38;5;241m=\u001b[39m image_files[index:index \u001b[38;5;241m+\u001b[39m batch_size]\n\u001b[1;32m---> 94\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [extract_image_details(index \u001b[38;5;241m+\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, path, resize_size) \u001b[38;5;28;01mfor\u001b[39;00m i, path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(batch)]\n\u001b[0;32m     95\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [features \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list \u001b[38;5;28;01mif\u001b[39;00m features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[0;32m     96\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(details_list)\n",
-      "Cell \u001b[1;32mIn[32], line 94\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start_index, \u001b[38;5;28mlen\u001b[39m(image_files), batch_size):\n\u001b[0;32m     93\u001b[0m     batch \u001b[38;5;241m=\u001b[39m image_files[index:index \u001b[38;5;241m+\u001b[39m batch_size]\n\u001b[1;32m---> 94\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [extract_image_details(index \u001b[38;5;241m+\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, path, resize_size) \u001b[38;5;28;01mfor\u001b[39;00m i, path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(batch)]\n\u001b[0;32m     95\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [features \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list \u001b[38;5;28;01mif\u001b[39;00m features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[0;32m     96\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(details_list)\n",
-      "Cell \u001b[1;32mIn[32], line 43\u001b[0m, in \u001b[0;36mextract_image_details\u001b[1;34m(image_id, path, resize_size)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[38;5;66;03m# Extract metadata\u001b[39;00m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 43\u001b[0m     exif_data \u001b[38;5;241m=\u001b[39m img\u001b[38;5;241m.\u001b[39m_getexif()\n\u001b[0;32m     44\u001b[0m     metadata \u001b[38;5;241m=\u001b[39m {ExifTags\u001b[38;5;241m.\u001b[39mTAGS\u001b[38;5;241m.\u001b[39mget(k, k): v \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m exif_data\u001b[38;5;241m.\u001b[39mitems()} \u001b[38;5;28;01mif\u001b[39;00m exif_data \u001b[38;5;28;01melse\u001b[39;00m {}\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\PIL\\PngImagePlugin.py:1010\u001b[0m, in \u001b[0;36mPngImageFile._getexif\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1008\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_getexif\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m   1009\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexif\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minfo:\n\u001b[1;32m-> 1010\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mload()\n\u001b[0;32m   1011\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexif\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minfo \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRaw profile type exif\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minfo:\n\u001b[0;32m   1012\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\PIL\\ImageFile.py:291\u001b[0m, in \u001b[0;36mImageFile.load\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    288\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(msg)\n\u001b[0;32m    290\u001b[0m b \u001b[38;5;241m=\u001b[39m b \u001b[38;5;241m+\u001b[39m s\n\u001b[1;32m--> 291\u001b[0m n, err_code \u001b[38;5;241m=\u001b[39m decoder\u001b[38;5;241m.\u001b[39mdecode(b)\n\u001b[0;32m    292\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    293\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
     }
    ],
    "source": [
@@ -565,6 +557,7 @@
     "    \n",
     "    with open('checkpoint.pkl', 'rb') as f:\n",
     "        batch_index, paths, rgb_hists, hsv_hists, other_data = pickle.load(f)\n",
+    "        print(f\"Loaded checkpoint.\\nStarting from path with ID: {batch_index + 1}\")\n",
     "\n",
     "    return batch_index, paths, rgb_hists, hsv_hists, other_data\n",
     "    \n",
@@ -622,12 +615,16 @@
     "df_rgb.to_pickle('RGB_Hist.pkl')\n",
     "df_hsv.to_pickle('HSV_Hist.pkl')\n",
     "df_paths.to_pickle('Path.pkl')\n",
-    "df_other_data.to_pickle('Other_data.pkl')"
+    "df_other_data.to_pickle('Other_data.pkl')\n",
+    "\n",
+    "# Checkpoint can be removed after program was successful\n",
+    "if os.path.exists('checkpoint.pkl'):\n",
+    "    os.remove('checkpoint.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -644,10 +641,10 @@
     {
      "data": {
       "text/plain": [
-       "100"
+       "0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,16 +662,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16"
+       "181"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {
     "scrolled": false
    },
@@ -694,51 +691,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    ID                                          Histogram\n",
-      "11  13  [0.20665304, 0.016907977, 0.0, 0.0, 0.0, 0.0, ...\n",
-      "12  14  [0.2258655, 0.015666971, 0.001305581, 0.0, 0.0...\n",
-      "13  15  [0.10874878, 0.07299575, 0.0, 0.0, 0.0, 0.0, 0...\n",
-      "14  16  [0.2071246, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...\n",
-      "15  17  [0.4422131, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...\n",
-      "    ID                                          Histogram\n",
-      "11  13  [0.011075616, 0.0, 0.005537808, 0.044302464, 0...\n",
-      "12  14  [0.008913387, 0.002546682, 0.002546682, 0.0050...\n",
-      "13  15  [0.01610175, 0.050094333, 0.028625334, 0.01789...\n",
-      "14  16  [0.034017637, 0.014323216, 0.030436834, 0.0429...\n",
-      "15  17  [0.018316956, 0.0033303557, 0.0016651779, 0.00...\n",
-      "    ID                                               Path\n",
-      "11  13  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-      "12  14  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-      "13  15  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-      "14  16  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-      "15  17  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-      "    ID                                      Average_Color  Brightness  \\\n",
-      "11  13  [167.24444444444444, 121.20972222222223, 95.98...  132.094722   \n",
-      "12  14  [135.36527777777778, 137.16361111111112, 135.1...  136.389167   \n",
-      "13  15  [114.55916666666667, 117.08361111111111, 93.26...  113.618611   \n",
-      "14  16  [125.15194444444444, 115.61194444444445, 84.76...  114.945000   \n",
-      "15  17  [112.56527777777778, 94.01194444444444, 77.400...   97.663056   \n",
+      "      ID                                          Histogram\n",
+      "176  177  [0.010170917, 0.44461438, 0.01598287, 0.0, 0.0...\n",
+      "177  178  [0.04859704, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0...\n",
+      "178  179  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
+      "179  180  [0.2950442, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...\n",
+      "180  181  [0.1805076, 0.029868163, 0.0, 0.0, 0.0, 0.0, 0...\n",
+      "      ID                                          Histogram\n",
+      "176  177  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
+      "177  178  [0.0, 0.0034040704, 0.0011346901, 0.010212211,...\n",
+      "178  179  [0.0, 0.0, 0.0, 0.0006082462, 0.0, 0.001824738...\n",
+      "179  180  [0.0, 0.0029820336, 0.0, 0.0, 0.0, 0.0, 0.0, 0...\n",
+      "180  181  [0.0, 0.0051383753, 0.017984314, 0.030830253, ...\n",
+      "      ID                                               Path\n",
+      "176  177  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+      "177  178  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+      "178  179  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+      "179  180  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+      "180  181  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+      "      ID                                      Average_Color  Brightness  \\\n",
+      "176  177  [109.4636111111111, 67.11527777777778, 113.712...   85.089444   \n",
+      "177  178            [180.9275, 159.90055555555554, 146.205]  164.628333   \n",
+      "178  179  [200.07833333333335, 193.0775, 170.8827777777778]  192.656389   \n",
+      "179  180  [136.22916666666666, 88.37527777777778, 60.194...   99.476111   \n",
+      "180  181  [138.22416666666666, 154.80027777777778, 164.0...  150.903611   \n",
       "\n",
-      "                                          Average_HSV    Resolution     DPI  \\\n",
-      "11   [66.175, 114.28861111111111, 172.48916666666668]  (2040, 1356)  (0, 0)   \n",
-      "12  [48.07388888888889, 83.45805555555556, 157.143...  (2040, 1524)  (0, 0)   \n",
-      "13  [50.50861111111111, 83.17305555555555, 130.586...  (2040, 1644)  (0, 0)   \n",
-      "14  [27.09861111111111, 93.83305555555556, 127.643...  (2040, 1356)  (0, 0)   \n",
-      "15  [28.726111111111113, 101.39805555555556, 114.0...  (2040, 1356)  (0, 0)   \n",
+      "                                           Average_HSV    Resolution  \\\n",
+      "176  [139.07722222222222, 132.01694444444445, 133.2...  (5758, 3829)   \n",
+      "177  [18.710555555555555, 59.69222222222222, 182.45...  (3311, 4966)   \n",
+      "178   [35.4075, 49.92888888888889, 205.38166666666666]  (3456, 5184)   \n",
+      "179  [12.673333333333334, 142.7927777777778, 136.34...  (6000, 4000)   \n",
+      "180   [86.8175, 51.29361111111111, 166.25611111111112]  (5350, 3567)   \n",
       "\n",
-      "    File_Size File_Type Metadata  \\\n",
-      "11    4877716      .png       {}   \n",
-      "12    5741871      .png       {}   \n",
-      "13    6114081      .png       {}   \n",
-      "14    4964392      .png       {}   \n",
-      "15    4620733      .png       {}   \n",
+      "          DPI  File_Size File_Type Metadata  \\\n",
+      "176  (72, 72)    2861175      .jpg       {}   \n",
+      "177  (72, 72)    4525958      .jpg       {}   \n",
+      "178  (72, 72)    2552535      .jpg       {}   \n",
+      "179  (72, 72)    2101161      .jpg       {}   \n",
+      "180  (72, 72)    1325082      .jpg       {}   \n",
       "\n",
-      "                                 Resized_Image_Vector  \n",
-      "11  [156, 169, 203, 146, 157, 187, 117, 129, 163, ...  \n",
-      "12  [231, 176, 92, 235, 183, 102, 239, 189, 113, 4...  \n",
-      "13  [82, 125, 167, 95, 139, 174, 120, 156, 193, 93...  \n",
-      "14  [97, 136, 149, 75, 123, 125, 92, 139, 141, 63,...  \n",
-      "15  [64, 91, 132, 12, 20, 47, 64, 124, 129, 29, 51...  \n"
+      "                                  Resized_Image_Vector  \n",
+      "176  [133, 63, 118, 134, 65, 124, 139, 67, 128, 142...  \n",
+      "177  [176, 206, 255, 171, 202, 255, 166, 197, 252, ...  \n",
+      "178  [237, 255, 254, 236, 254, 253, 237, 255, 254, ...  \n",
+      "179  [28, 40, 74, 41, 75, 142, 63, 80, 135, 68, 87,...  \n",
+      "180  [244, 240, 229, 245, 242, 234, 243, 239, 228, ...  \n"
      ]
     }
    ],
