Removed resized_image_vector from extraction

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -139,18 +139,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded checkpoint.\n",
+      "Starting from path with ID: 101\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f74699cf8a2f4324ae04105137f844d6",
+       "model_id": "91dead38b8e7476eb2ed7bfff9396f1a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Processing images:   0%|          | 0/2 [00:00<?, ?it/s]"
+       "Processing images:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -160,8 +168,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4min 27s\n",
-      "Wall time: 55.5 s\n"
+      "CPU times: total: 2min\n",
+      "Wall time: 24.8 s\n"
      ]
     }
    ],
@@ -180,12 +188,6 @@
     "            model_embedding = model_embeddings_calculation(image)\n",
     "            \n",
     "            ### several more informations ###\n",
-    "            \n",
-    "            # Resize image\n",
-    "            resized_image = cv2.resize(image, resize_size)\n",
-    "            \n",
-    "            # Flatten image\n",
-    "            resized_image_vector = resized_image.flatten()\n",
     "            \n",
     "            # Convert to RGB\n",
     "            image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
@@ -231,8 +233,7 @@
     "                'DPI': dpi,\n",
     "                'File_Size': file_size,\n",
     "                'File_Type': file_type,\n",
-    "                'Metadata': metadata,\n",
-    "                'Resized_Image_Vector': resized_image_vector\n",
+    "                'Metadata': metadata\n",
     "            }\n",
     "        \n",
     "        else:\n",
@@ -305,7 +306,7 @@
     "                                                 \"Brightness\", \"Average_HSV\",\n",
     "                                                 \"Resolution\",\"DPI\",\n",
     "                                                 \"File_Size\", \"File_Type\",\n",
-    "                                                 \"Metadata\", \"Resized_Image_Vector\"\n",
+    "                                                 \"Metadata\"\n",
     "                                                ])\n",
     "\n",
     "df_paths.to_pickle('Path.pkl')\n",
@@ -425,19 +426,12 @@
       "179  [12.673333333333334, 142.7927777777778, 136.34...  (6000, 4000)   \n",
       "180   [86.8175, 51.29361111111111, 166.25611111111112]  (5350, 3567)   \n",
       "\n",
-      "          DPI  File_Size File_Type Metadata  \\\n",
-      "176  (72, 72)    2861175      .jpg       {}   \n",
-      "177  (72, 72)    4525958      .jpg       {}   \n",
-      "178  (72, 72)    2552535      .jpg       {}   \n",
-      "179  (72, 72)    2101161      .jpg       {}   \n",
-      "180  (72, 72)    1325082      .jpg       {}   \n",
-      "\n",
-      "                                  Resized_Image_Vector  \n",
-      "176  [133, 63, 118, 134, 65, 124, 139, 67, 128, 142...  \n",
-      "177  [176, 206, 255, 171, 202, 255, 166, 197, 252, ...  \n",
-      "178  [237, 255, 254, 236, 254, 253, 237, 255, 254, ...  \n",
-      "179  [28, 40, 74, 41, 75, 142, 63, 80, 135, 68, 87,...  \n",
-      "180  [244, 240, 229, 245, 242, 234, 243, 239, 228, ...  \n"
+      "          DPI  File_Size File_Type Metadata  \n",
+      "176  (72, 72)    2861175      .jpg       {}  \n",
+      "177  (72, 72)    4525958      .jpg       {}  \n",
+      "178  (72, 72)    2552535      .jpg       {}  \n",
+      "179  (72, 72)    2101161      .jpg       {}  \n",
+      "180  (72, 72)    1325082      .jpg       {}  \n"
      ]
     }
    ],
